[package]
name = "yaz0_rust"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
cxx = { version = "1.0.91", optional = true }
yaz0 = { version = "0.3.0" }

[build-dependencies]
cxx-build = { version = "1.0.91" }

[features]
cabi = []